feat(M88.1): BamDump --reference flag + .cram extension dispatch
Extends the M87 BamDump CLI with optional --reference flag.
Auto-dispatches to CramReader when path ends in .cram
(case-insensitive). Errors with exit 2 when .cram is given
without --reference. Existing BAM/SAM behaviour unchanged.

Output is byte-identical to Python bam_dump on M88 CRAM fixture
(914 bytes, md5 2be5c5bccc95635240aa60337406cb35).

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>